# nyckel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/nyckeld/: Storage.hpp
libnyckel/: CMakeLists.txt
libnyckel/include/nyckel/: Configuration.hpp  DomainMatcher.hpp  Guard.hpp  Keyring.hpp  Util.hpp
libnyckel/include_tcc/nyckel/: Guard.tcc  Util.tcc
libnyckel/src/: Configuration.cpp  DomainMatcher.cpp  Guard.cpp  Keyring.cpp
src/: Storage.cpp  main.cpp
